tests/baselines/reference/parserShorthandPropertyAssignment3.errors.txt
tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment3.ts(1,14): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment3.ts (1 errors) ====
    var v = { "" };
                 ~
!!! error TS1005: ':' expected.